Security/04-RequestAuthn-and-AuthzPolicy/keycloak/keycloak-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: keycloak-virtualservice
  namespace: keycloak
spec:
  hosts:
  - "keycloak.magedu.com"
  gateways:
  - "istio-system/keycloak-gateway"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: keycloak
        port:
          number: 8080
---
